<resources>
    <string name="app_name">Mizeup</string>
    <string name="apresentation_splashscreen">Você pode gerenciar seus estudos de maneira fácil e eficiente.</string>
    <string name="button_login_email">Entrar com E-mail</string>
    <string name="button_login_google">Entrar com Google</string>
    <string name="button_login_apple">Entrar com Apple</string>
    <string name="create_account">Crie sua conta!</string>
    <string name="new_create_account">Criar conta</string>
    <string name="email">Email</string>
    <string name="email_invalidate">Email inválido.</string>
    <string name="empty_form">Por favor, preencha todos os campos.</string>
    <string name="error_google_sign_in">Erro ao efetuar login com a conta google</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="login">Logar</string>
    <string name="name">Nome</string>
    <string name="other_login">Outra forma de login</string>
    <string name="password">Senha</string>
    <string name="password_length">Digite uma senha com mais de 8 caracteres</string>
    <string name="select_objetive">Selecione um objetivo</string>
    <string name="signout">Sair</string>
    <string name="surname">Sobrenome</string>
    <string name="head_objective">Ótimo! Agora precisamos saber um pouco sobre você.</string>
    <string name="scape_onboarding">Pular tudo</string>
    <string name="description_objective">O MizeuUP quer que você se planeje nos seus estudo para alcançar seus objetivos.
        \n\nNós sugerimos um plano de estudos adequado com sua disponibilidade, prioridade e objetivo.
        \n\nPara isso, pedimos a você, que preencha seu perfil completamente.\n\nVocê pode selecionar mais de um objetivo.</string>
    <string name="next">Próximo</string>
    <string name="especify_an_objective">especifique um objetivo</string>
    <string name="choose_an_option">escolha uma opção</string>
</resources>

