<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFormsActivity">

    <ImageView
        android:id="@+id/image_splashscreen"
        android:layout_width="match_parent"
        android:layout_height="670dp"
        android:layout_marginLeft="-90dp"
        android:alpha="0.5"
        android:src="@drawable/logo_half_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:text="@string/apresentation_splashscreen"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        android:textSize="29sp"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_email_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorGray"
        android:padding="8dp"
        android:text="@string/button_login_email"
        android:textAllCaps="false"
        android:textColor="@color/cardview_dark_background"
        android:textSize="16sp"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="170dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/button_google_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorBlue"
        android:padding="8dp"
        android:text="@string/button_login_google"
        android:textAllCaps="false"
        android:textColor="@color/cardview_light_background"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_email_login"/>

    <Button
        android:id="@+id/button_apple_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorGray"
        android:padding="8dp"
        android:text="@string/button_login_apple"
        android:textAllCaps="false"
        android:textColor="@color/cardview_dark_background"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_google_login"/>

    <Button
        android:id="@+id/button_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="16sp"
        android:textStyle="bold"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textColor="@color/colorBlue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>